# MindMiner

./: .env  .gitignore  README.md  docker-compose.yml  main.py  metrics.ipynb  pyproject.toml  requirements.txt
app/: app.py  init_db.py  sample.env  streamlit_app.py
app/core/: bge.py  chain.py  embeddings.py  instruction.py  qdrant.py  settings.py  update.py
bot/: .env.example  main.py
builds/backend/: requirements.txt
builds/frontend/: Dockerfile
data/: target_dataset.json
data/lesha_obsi_sample/: Adam optimizer.md  Attention (DL).md  Attention is all wee need(2017).md  BLEU (BiLingual Evaluation Understudy).md  Bayes' rule.md  BiRNN or Deep and Bi-directional RNNs.md  Binary Classification.md  Chain Rule (Производная сложной функции, Правило цепочки).md  Cross-entropy loss.md  Dense(Linear or Fully-connected or FC) layer.md  Derivative (Производная).md  V-JEPA.md  Word2vec.md  classic ML.md  Алазанская долина.md  Виноградные микрозоны.md  Виноделие Квеври.md  Грузинское виноделие.md  Кацители.md  Киндзмараули.md  Магия утра.md  Мукузани.md  Мускат.md  Мцхета.md  Последовательность.md  СВ_Сила я не буду.md  Саперави виноград.md  Саперави красное.md  Саперави мускат.md  Саперави розе.md  Твиши.md
data/test_vault/: 20 Healthy meals in 1 Hour.md  Activation function.md  Adam optimizer.md  AdamW.md  Alazani Valley (Алазанская долина).md  Angle between Two Vectors.md  Array.md  Attention (DL).md  Attention is all wee need(2017).md  Auto-complete.md  Autocorrect task.md  BERT.md  Basis(базис).md  Batat (Батат).md  Batch normalization.md  Beam Search.md  Conda.md  (+305 more)
(+5 files in other folders)
