[tool.poetry]
name = "mindminer"
version = "0.1.0"
description = ""
authors = ["AkiRusProd <akirusprod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"

fastapi = "^0.115.6"
streamlit = "^1.41.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-qdrant = "^0.2.0"
langchain-groq = "^0.2.1"
markdown = "^3.7"
unstructured = "^0.16.11"
flagembedding = "^1.3.3"
nltk = "^3.9.1"
langchain-openai = "^0.2.12"
uvicorn = "^0.34.0"
langchain-gigachat = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
